[package]
name = "emu68k"
version = "0.1.0"
authors = ["Simon Scatton <simon.scatton@outlook.fr>", "Vlad Argatu <vlad.argatu@epita.fr>"]
edition = "2018"

[[bin]]
name = "68kemu"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
